examples/test/testpolicy11235.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11235
  namespace: namespace237
spec:
  podSelector:
    matchLabels:
      key19: value44
      key45: value15
      key41: value4
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key42: value11
          key36: value14
          key29: value2
